# coppelia-sim-framework

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
apps/: PionerHouse.py  __init__.py  locomocao.py  teste.py
brainbyte/: __init__.py
brainbyte/control/: automatic.py  manual.py
brainbyte/core/: __init__.py  base_app.py  bridge.py  paths.py
brainbyte/gui/: __init__.py  algo.py  auxF.py  cli.py
brainbyte/robots/: __init__.py  base_bot.py
brainbyte/robots/base/: base_bot.py
brainbyte/robots/movel/: Manta.py  TurtleBot.py  pioneerBot.py  robotino.py  youBot.py
brainbyte/sensors/: HokuyoSensor.py  LDS_02.py  __init__.py
brainbyte/sensors/base/: base_sensor.py
brainbyte/utils/: __init__.py  logging.py  math.py
brainbyte/utils/basics/: app.txt  scene.ttt
coppelia_sim_framework/: __init__.py
coppelia_sim_framework/core/: __init__.py  base_app.py  logging.py
coppelia_sim_framework/robots/: __init__.py
coppelia_sim_framework/sensors/: __init__.py
coppelia_sim_framework/utils/: __init__.py  logging.py  plotting.py
core/: base_app.py  utils.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: laser_visualization_example.py  locomocao_example.py  obstacle_avoidance_example.py  robotino_exemple.py
projects/: __init__.py
projects/Obstaculos/obstacles/: house.ttt  obstacles.py
projects/PID_exemple/: PID_exemple.py
projects/Sensores/lidar_exemple/: labirinto.ttt  lidar_exemple.py
projects/Sensores/turtleBot/: turtleBot.py
projects/Testes/Teste/: Teste.py
projects/lidar_exemple/: lidar_exemple.py
projects/malha_aberta_exemplo/: malha_aberta_exemplo.py
projects/malha_fechada_exemplo/: malha_fechada_exemplo.py
projects/obstacles/: obstacles.py
projects/robotino_exemple/: robotino_exemple.py
projects/turtleBot/: turtleBot.py
robots/sensors/: HokuyoSensor.py  HukuyoSensor.py
scenes/: house.ttt  labirinto.ttt  locomocao.ttt
tests/: __init__.py  test_framework.py
(+8 files in other folders)
